added menu for phone and desktop, side nav slider and header markup and styles, added media query to check for screen of maxwidth 1024px

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 //colors
 $color-white: #fff;
 $color-black: #000;
+$color-grey-dark: #2f3542;
+$header-color: #ddd;
 //others
 $primary-transition: all .4s cubic-bezier(0.165, 0.84, 0.44, 1);
 $sec-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
