--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,11 +5,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png">-->
   <title>Document</title>
 </head>
 
 <body>
+  <div class="container__sidenav-btndiv" id="container__sidenav-btndiv">
+    <div class="container__sidenav-btn">
 
+    </div>
+  </div>
+  <!--sidenav beginning-->
+  <input type="checkbox" class="container__sidenav-check" id="container__sidenav-check">
+  <div class="container__sidenav" id="container__sidenav">
+    <ul class="container__sidenav-list">
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">home</a>
+      </li>
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">about</a>
+      </li>
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">services</a>
+      </li>
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">portfolio</a>
+      </li>
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">blog</a>
+      </li>
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">contact</a>
+      </li>
+    </ul>
+  </div>
+  <!--side nav ending-->
+  <div class="container" id="container">
+    <div class="header">
+      <div class="header__container">
+        <p class="header__title">
+          David
+        </p>
+        <ul class="header__list">
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">home</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">about</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">services</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">portfolio</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">blog</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">contact</a>
+          </li>
+        </ul>
+
+        <div class="header__intro" id="header__intro">
+          <figure class="header__intro-photo">
+            <img src="../imgs/intro__img.png" alt="" class="header__intro-img">
+          </figure>
+          <!--<p class="header__intro-greeting">welcome</p>-->
+          <div class="header__intro-text">
+            <h1 class="header__intro-name" id="header__intro-name">
+              Hello, I'm Dave Micah
+            </h1>
+            <p class="header__intro-about">I'm a fullstack javascript developer, and software developer</p>
+            <div class="header__intro-socials">
+              <div>
+                <svg class="header__intro-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-facebook"></use>
+                </svg>
+              </div>
+              <div>
+                <svg class="header__intro-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-github"></use>
+                </svg>
+              </div>
+              <div>
+                <svg class="header__intro-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-instagram2"></use>
+                </svg>
+              </div>
+              <div>
+                <svg class="header__intro-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-linkedin2"></use>
+                </svg>
+              </div>
+              <div>
+                <svg class="header__intro-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-youtube2"></use>
+                </svg>
+              </div>
+              <div>
+                <svg class="header__intro-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-twitter2"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="header__intro-btnarea">
+            <a href="#" class="header__intro-btn">contact me</a>
+            <a href="#" class="header__intro-mouse">&darr;</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </body>
 
 </html>
