--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,5 @@
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
+@import "layout/container";
+@import "components/header";
