added black background color

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -24,11 +24,12 @@ body {
   }
   &__intro-name {
     letter-spacing: .1rem;
-    font-size: 350%;
+    font-size: 400%;
+    font-weight: 900;
   }
   &__intro-about {
     letter-spacing: 2px;
-    font-size: 130%;
+    font-size: 140%;
   }
   &__Intro-mouse {
     font-size: 80%;
