--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 100vh;
-  background: linear-gradient(to right bottom, rgba(53, 59, 72, 1), rgba(53, 59, 72, .9)), url(.././imgs/desktop3.jpg);
+  background: linear-gradient(to right bottom, rgba(19, 20, 20, 1), rgba(19, 20, 20, .9)), url(.././imgs/desktop3.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -10,13 +10,14 @@
     position: relative;
     margin: 0 auto;
     padding: .5rem;
-    width: 80%;
+    width: 75%;
   }
   &__title {
     position: absolute;
     top: 0;
     left: 0;
     padding: 1.5rem 0;
+    cursor: pointer;
   }
   &__list {
     position: absolute;
@@ -73,8 +74,8 @@
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    width: 14rem;
-    height: 14rem;
+    width: 12rem;
+    height: 12rem;
     margin: 0 auto;
   }
   &__intro-img {
@@ -83,7 +84,6 @@
     object-fit: cover;
     display: block;
   }
-  &__intro-text {}
   &__intro-name {
     text-align: center;
   }
@@ -99,7 +99,7 @@
   }
   &__intro-icon {
     fill: $header-color;
-    height: 1.3rem;
+    height: 1rem;
     width: 1rem;
     margin: 0 .9rem;
     transition: $primary-transition;
