--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,11 +11,13 @@
 </head>
 
 <body>
+  <!--side nav btn beginning-->
   <div class="container__sidenav-btndiv" id="container__sidenav-btndiv">
     <div class="container__sidenav-btn">
-
+      &darr;
     </div>
   </div>
+  <!--side nav btn ending-->
   <!--sidenav beginning-->
   <input type="checkbox" class="container__sidenav-check" id="container__sidenav-check">
   <div class="container__sidenav" id="container__sidenav">
@@ -25,6 +27,9 @@
       </li>
       <li class="container__sidenav-listitem">
         <a href="#" class="container__sidenav-link">about</a>
+      </li>
+      <li class="container__sidenav-listitem">
+        <a href="#" class="container__sidenav-link">experience</a>
       </li>
       <li class="container__sidenav-listitem">
         <a href="#" class="container__sidenav-link">services</a>
@@ -42,6 +47,7 @@
   </div>
   <!--side nav ending-->
   <div class="container" id="container">
+    <!--header beginning-->
     <div class="header">
       <div class="header__container">
         <p class="header__title">
@@ -53,6 +59,9 @@
           </li>
           <li class="header__list-item">
             <a href="#" class="header__list-link">about</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#" class="header__list-link">experience</a>
           </li>
           <li class="header__list-item">
             <a href="#" class="header__list-link">services</a>
@@ -118,7 +127,53 @@
         </div>
       </div>
     </div>
+    <!--header ending-->
 
+    <!--about beginning-->
+    <div class="about">
+      <div class="about__container">
+        <h2 class="about__container-h2">About Me</h2>
+        <h5 class="about__container-sub">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex enim iste minima! Ut nostrum culpa facere modi minima
+          corporis, cum dolore laborum fugit.</h5>
+        <div class="about__container-content">
+          <div class="about__bio">
+            <p class="about__paragraph">
+              Ipsam cupiditate dolorem perspiciatis doloribus neque sit molestiae similique quas velit. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Est, laboriosam eum! Aperiam ullam labore illo distinctio, doloremque nesciunt, harum beatae
+              natus ipsam accusantium
+            </p>
+            <div class="about__email">
+              <p class="about__email-content">
+                <span>
+                  <svg class="about__email-icon">
+                    <use xlink:href="../imgs/sprite.svg#icon-envelop"></use>
+                  </svg>
+                </span>Email: nerdyemmanuel@gmail.com</p>
+            </div>
+            <a href="#" class="about__btn">contact me</a>
+          </div>
+          <div class="about__skills">
+            <div class="about__skill" id="about__skill-1">
+              <p class="about__skill-letters">html5, css3</p>
+              <p class="about__skill-numbers">90%</p>
+            </div>
+            <div class="about__skill" id="about__skill-2">
+              <p class="about__skill-letters">design</p>
+              <p class="about__skill-numbers">60%</p>
+            </div>
+            <div class="about__skill" id="about__skill-3">
+              <p class="about__skill-letters">photography</p>
+              <p class="about__skill-numbers">50%</p>
+            </div>
+            <div class="about__skill" id="about__skill-4">
+              <p class="about__skill-letters">php and mysql</p>
+              <p class="about__skill-numbers">90%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--about ending-->
   </div>
 </body>
 
