--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -149,7 +149,10 @@
                   </svg>
                 </span>Email: nerdyemmanuel@gmail.com</p>
             </div>
-            <a href="#" class="about__btn">contact me</a>
+            <div class="about__btns">
+              <a href="#" class="about__btn">contact me</a>
+              <a href="#" class="about__btn">my cv</a>
+            </div>
           </div>
           <div class="about__skills">
             <div class="about__skill" id="about__skill-1">
@@ -312,6 +315,66 @@
       </div>
     </div>
     <!--services section ending-->
+
+    <!--blog section beginning-->
+    <div class="blog">
+      <div class="blog__container">
+        <h2 class="blog__container-h2">Blog</h2>
+        <h5 class="blog__container-sub">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex enim iste minima! Ut nostrum culpa facere modi minima
+          corporis, cum dolore laborum fugit.</h5>
+        <div class="blog__container-content">
+          <div class="blog__card">
+            <figure class="blog__card-figure">
+              <img src="../imgs/blog1.jpg" alt="" class="blog__card-img">
+            </figure>
+            <div class="blog__card-text">
+              <p class="blog__card-details">
+                Written By
+                <span class="blog__card-name">Dave Micah</span>
+                <span class="blog__card-date">12th August 2018</span>
+              </p>
+              <h4 class="blog__card-h4">Why I love Batman</h4>
+              <p class="blog__card-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque facere corporis alias vitae iure maiores
+                deleniti dolor. Aliquid, eaque inventore. Quam nihil asperiores</p>
+              <a href="#" class="blog__card-btn">Read</a>
+            </div>
+          </div>
+          <div class="blog__card">
+            <figure class="blog__card-figure">
+              <img src="../imgs/blog1.jpg" alt="" class="blog__card-img">
+            </figure>
+            <div class="blog__card-text">
+              <p class="blog__card-details">
+                Written By
+                <span class="blog__card-name">Dave Micah</span>
+                <span class="blog__card-date">12th August 2018</span>
+              </p>
+              <h4 class="blog__card-h4">Why I love Batman</h4>
+              <p class="blog__card-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque facere corporis alias vitae iure maiores
+                deleniti dolor. Aliquid, eaque inventore. Quam nihil asperiores</p>
+              <a href="#" class="blog__card-btn">Read</a>
+            </div>
+          </div>
+          <div class="blog__card">
+            <figure class="blog__card-figure">
+              <img src="../imgs/blog1.jpg" alt="" class="blog__card-img">
+            </figure>
+            <div class="blog__card-text">
+              <p class="blog__card-details">
+                Written By
+                <span class="blog__card-name">Dave Micah</span>
+                <span class="blog__card-date">12th August 2018</span>
+              </p>
+              <h4 class="blog__card-h4">Why I love Batman</h4>
+              <p class="blog__card-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam neque facere corporis alias vitae iure maiores
+                deleniti dolor. Aliquid, eaque inventore. Quam nihil asperiores</p>
+              <a href="#" class="blog__card-btn">Read</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--blog section ending-->
   </div>
 </body>
 
