added clients card, yet to add the slider functionality and checkbox input and javascript for the functionality

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -92,6 +92,12 @@ h5 {
   }
 }
 
+.clients {
+  &__card-para {
+    letter-spacing: 2px;
+  }
+}
+
 .blog {
   &__card-details {
     font-size: 80%;
