--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -316,6 +316,56 @@
     </div>
     <!--services section ending-->
 
+    <!--clients section beginning-->
+    <div class="clients">
+      <div class="clients__container">
+        <h2 class="clients__container-h2">Clients</h2>
+        <h5 class="clients__container-sub">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex enim iste minima! Ut nostrum culpa facere modi minima
+          corporis, cum dolore laborum fugit.</h5>
+        <div class="clients__container-content">
+          <div class="clients__card">
+            <figure class="clients__card-figure">
+              <img class="clients__card-img" src="../imgs/avtar1.jpg" alt="">
+            </figure>
+            <h4 class="clients__card-name">Jerry Mandy</h4>
+            <p class="clients__card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe temporibus at, animi quos laboriosam quod natus!
+              Tempora ipsa accusamus quod laudantium nemo, iste recusandae!</p>
+          </div>
+          <div class="clients__card">
+            <figure class="clients__card-figure">
+              <img class="clients__card-img" src="../imgs/avtar2.jpg" alt="">
+            </figure>
+            <h4 class="clients__card-name">Andria Wade</h4>
+            <p class="clients__card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe temporibus at, animi quos laboriosam quod natus!
+              Tempora ipsa accusamus quod laudantium nemo, iste recusandae!</p>
+          </div>
+          <div class="clients__card">
+            <figure class="clients__card-figure">
+              <img class="clients__card-img" src="../imgs/avtar1.jpg" alt="">
+            </figure>
+            <h4 class="clients__card-name">Mark Pheonix</h4>
+            <p class="clients__card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe temporibus at, animi quos laboriosam quod natus!
+              Tempora ipsa accusamus quod laudantium nemo, iste recusandae!</p>
+          </div>
+          <div class="clients__card">
+            <figure class="clients__card-figure">
+              <img class="clients__card-img" src="../imgs/avtar1.jpg" alt="">
+            </figure>
+            <h4 class="clients__card-name">John Price</h4>
+            <p class="clients__card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe temporibus at, animi quos laboriosam quod natus!
+              Tempora ipsa accusamus quod laudantium nemo, iste recusandae!</p>
+          </div>
+        </div>
+        <div class="clients__btns">
+          <ul class="clients__btns-list">
+            <li class="clients__btn-listitem"></li>
+            <li class="clients__btn-listitem"></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--clients section ending-->
+
     <!--blog section beginning-->
     <div class="blog">
       <div class="blog__container">
