added contact form and address sections, added ::before pseudo element to the contact section

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,8 +1,10 @@
 //colors
 $color-white: #fff;
 $color-black: #000;
+$color-grey-light-1: #c7ecee;
 $color-grey-dark: #2f3542;
 $header-color: #ddd;
+$color-primary: rgba(255, 143, 0, 1.0);
 //others
 $primary-transition: all .4s cubic-bezier(0.165, 0.84, 0.44, 1);
 $sec-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
