--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -147,7 +147,7 @@
                   <svg class="about__email-icon">
                     <use xlink:href="../imgs/sprite.svg#icon-envelop"></use>
                   </svg>
-                </span>Email: nerdyemmanuel@gmail.com</p>
+                </span>Email: davidmicah@gmail.com</p>
             </div>
             <div class="about__btns">
               <a href="#" class="about__btn">contact me</a>
@@ -425,6 +425,75 @@
       </div>
     </div>
     <!--blog section ending-->
+
+    <!--contact section beginning-->
+    <div class="contact">
+      <div class="contact__container">
+        <h2 class="contact__container-h2">Contact Me</h2>
+        <div class="contact__container-content">
+          <div class="contact__address">
+            <h4 class="contact__address-h4">Get In Touch</h4>
+            <div class="contact__address-item">
+              <span>
+                <svg class="contact__address-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-email"></use>
+                </svg>
+              </span>
+              <p class="contact__address-email">
+                davidmicah@gmail.com
+              </p>
+            </div>
+            <div class="contact__address-item">
+              <span>
+                <svg class="contact__address-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-location"></use>
+                </svg>
+              </span>
+              <p class="contact__address-address">
+                FN-2187 Metropolis, Gotham Street, DC.
+              </p>
+            </div>
+            <div class="contact__address-item">
+              <span>
+                <svg class="contact__address-icon">
+                  <use xlink:href="../imgs/sprite.svg#icon-mobile"></use>
+                </svg>
+              </span>
+              <p class="contact__address-number">
+                +1 8056 840048
+              </p>
+              <p class="contact__address-number">
+                +1 8056 840048
+              </p>
+            </div>
+          </div>
+
+          <form action="#" class="contact__form">
+            <div class="contact__form-group">
+              <input type="text" class="contact__form-input" placeholder="Full name" id="name" required>
+              <label for="name" class="contact__form-label"></label>
+            </div>
+            <div class="contact__form-group">
+              <input type="email" class="contact__form-input" placeholder="Email" id="email" required>
+              <label for="email" class="contact__form-label"></label>
+            </div>
+            <div class="contact__form-group">
+              <input type="text" class="contact__form-input" placeholder="Subject" id="subject" required>
+              <label for="subject" class="contact__form-label"></label>
+            </div>
+            <div class="contact__form-group contact__form-group-description">
+              <textarea name="description" id="description" cols="30" rows="10" placeholder="Description" class="contact__form-textarea"
+                id="description" required></textarea>
+              <label for="description" class="contact__form-label"></label>
+            </div>
+            <div class="contact__form-group">
+              <a href="#" class="contact__form-btn" id="contact__form-btn">send</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!--contact section ending-->
   </div>
 </body>
 
