--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -492,6 +492,46 @@
           </form>
         </div>
       </div>
+      <!--footer section beginning-->
+      <div class="footer">
+        <div class="footer__container">
+          <h4 class="footer__container-h4">David.</h4>
+          <div class="footer__icons">
+            <span>
+              <svg class="footer-icon">
+                <use xlink:href="../imgs/sprite.svg#icon-facebook"></use>
+              </svg>
+            </span>
+            <span>
+              <svg class="footer-icon">
+                <use xlink:href="../imgs/sprite.svg#icon-github"></use>
+              </svg>
+            </span>
+            <span>
+              <svg class="footer-icon">
+                <use xlink:href="../imgs/sprite.svg#icon-instagram2"></use>
+              </svg>
+            </span>
+            <span>
+              <svg class="footer-icon">
+                <use xlink:href="../imgs/sprite.svg#icon-linkedin2"></use>
+              </svg>
+            </span>
+            <span>
+              <svg class="footer-icon">
+                <use xlink:href="../imgs/sprite.svg#icon-behance"></use>
+              </svg>
+            </span>
+            <span>
+              <svg class="footer-icon">
+                <use xlink:href="../imgs/sprite.svg#icon-twitter2"></use>
+              </svg>
+            </span>
+          </div>
+          <p class="footer-licence">&copy; 2018 davemicah. All Rights Reserved</p>
+        </div>
+      </div>
+      <!--footer section ending-->
     </div>
     <!--contact section ending-->
   </div>
