--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,6 +1,7 @@
 .contact {
   background: #f7f7f7;
   position: relative;
+  overflow: hidden;
   &::before {
     position: absolute;
     content: '';
@@ -13,14 +14,13 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 40%;
-    z-index: 3000;
+    height: 46%;
   }
   &__container {
     position: relative;
     margin: 0 auto;
     padding: 6rem .5rem;
-    padding-bottom: 14rem;
+    padding-bottom: 12rem;
     width: 75%;
   }
   &__container-h2 {
@@ -73,8 +73,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 143, 0, .9);
-      ;
+      background-color: rgba(255, 143, 0, 1);
     }
   }
   &__form-input {
@@ -84,7 +83,7 @@
     font-family: inherit;
     color: $color-black;
     border-radius: 2px;
-    background-color: rgba(255, 143, 0, .9);
+    background-color: rgba(255, 143, 0, 1);
     border: none;
     border-bottom: 3px solid transparent;
     display: block;
@@ -92,7 +91,7 @@
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, .1);
-      border-bottom: 3px solid $color-primary;
+      border-bottom: 3px solid $color-black;
     }
     &:focus:invalid {
       border-bottom: 3px solid #eb4d4b;
@@ -110,6 +109,7 @@
     width: 100%;
     height: 100%;
     border-radius: .3rem;
+    border: none;
     padding: .8rem;
     width: 100%;
     z-index: 5000;
@@ -119,7 +119,7 @@
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, .1);
-      border-bottom: 3px solid $color-primary;
+      border-bottom: 3px solid $color-black;
     }
     &:focus:invalid {
       border-bottom: 3px solid #eb4d4b;
