--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -423,6 +423,19 @@
           </div>
         </div>
       </div>
+      <div class="blog__newsletter">
+        <div class="blog__newsletter-content">
+          <h2 class="blog__newsletter-h2">Join Our Newletter</h2>
+          <h5 class="blog__newsletter-sub">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ex enim iste minima! Ut nostrum culpa facere modi
+            minima corporis, cum dolore laborum fugit.</h5>
+          <form action="#" class="blog__newsletter-form">
+            <div class="blog__newsletter-formgroup">
+              <input type="email" class="blog__newsletter-forminput" placeholder="Email" id="email" required>
+            </div>
+            <a href="#" class="blog__newletter-btn">subscribe</a>
+          </form>
+        </div>
+      </div>
     </div>
     <!--blog section ending-->
 
