--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -128,6 +128,14 @@ h5 {
     letter-spacing: .1rem;
     text-transform: uppercase;
   }
+  &__newsletter-forminput {
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    &::-webkit-input-placeholder {
+      font-weight: 700;
+      font-size: 1rem;
+    }
+  }
 }
 
 .contact {
