--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -15,7 +15,7 @@ body {
   box-sizing: border-box;
   text-rendering: optimizeLegibility;
   background: #E8EAF6;
-  overflow-x: hidden;
+  overflow-x: hidden; //padding: 1rem;
   @media only screen and (max-width: 1024px) {
     padding: 0;
   }
