clean up for 8/24/2018 5:08pm

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -147,8 +147,7 @@ h5 {
   }
   &__address-h4 {
     font-weight: 900;
-    font-size: 200%;
-    text-decoration: underline;
+    font-size: 200%; //text-decoration: underline;
   }
   &__address-item {
     &>p {
