--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -14,7 +14,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 46%;
+    height: 32%;
   }
   &__container {
     position: relative;
@@ -36,6 +36,8 @@
     width: 36%;
     padding: 1rem;
     color: rgba(30, 39, 46, 1.0);
+    height: 100%;
+    border: solid;
     z-index: 7000;
   }
   &__address-item {
@@ -133,9 +135,9 @@
   &__form-btn:visited,
   &__form-btn:active {
     @include btnStyling;
-    color: $color-black;
+    color: $color-primary;
     padding: .7rem .1rem;
-    background: linear-gradient(to right bottom, rgba(255, 143, 0, 1.0), rgba(255, 143, 0, 1.0));
+    background: linear-gradient(to right bottom, rgba(19, 20, 20, 1), rgba(19, 20, 20, .9));
     border: none;
     margin-right: 1rem;
     width: 20%;
