still need to add the typescript for the portfolio switch feature

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "components/experience";
 @import "components/services";
 @import "components/blog";
+@import "components/portfolio";
 @import "components/clients";
 @import "components/contact";
 @import "components/footer";
