--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -14,6 +14,7 @@
   display: inline-block;
   transition: all .5s cubic-bezier(0.55, 0.085, 0.68, 0.53);
   background: $color;
+  backface-visibility: hidden;
 }
 
 @mixin btnStyling {
