--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -8,6 +8,7 @@ body {
 h2 {
   font-size: 270%;
   font-weight: 900;
+  text-align: center;
 }
 
 h3 {
@@ -135,6 +136,28 @@ h5 {
       font-weight: 700;
       font-size: 1rem;
     }
+  }
+}
+
+.portfolio {
+  &__container-listitem {
+    font-size: 69%;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+  &__card-category {
+    text-align: center;
+    font-weight: 400;
+    font-size: 110%;
+    letter-spacing: 1px;
+  }
+  &__card-name {
+    text-align: center;
+    font-weight: 700;
+    font-size: 150%;
+    letter-spacing: 2px;
   }
 }
 
