--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -439,6 +439,70 @@
     </div>
     <!--blog section ending-->
 
+    <!--portfolio section beginning-->
+    <div class="portfolio">
+      <div class="portfolio__container">
+        <h2 class="portfolio__container-h2">Portfolio</h2>
+        <ul class="portfolio__container-list">
+          <li class="portfolio__container-listitem">all</li>
+          <li class="portfolio__container-listitem">web development</li>
+          <li class="portfolio__container-listitem">branding</li>
+          <li class="portfolio__container-listitem">photography</li>
+          <li class="portfolio__container-listitem">seo</li>
+        </ul>
+        <input type="checkbox" class="portfolio__container-checkbox" id="portfolio__container-checkbox-all">
+        <input type="checkbox" class="portfolio__container-checkbox" id="portfolio__container-checkbox-webdev">
+        <input type="checkbox" class="portfolio__container-checkbox" id="portfolio__container-checkbox-branding">
+        <input type="checkbox" class="portfolio__container-checkbox" id="portfolio__container-checkbox-photography">
+        <input type="checkbox" class="portfolio__container-checkbox" id="portfolio__container-checkbox-seo">
+        <div class="portfolio__cards">
+          <div class="portfolio__card portfolio__card-category-webdev">
+            <figure class="portfolio__card-figure">
+              <img src="../imgs/project0.jpg" alt="" class="portfolio__card-img">
+              <p class="portfolio__card-category">Category</p>
+              <p class="portfolio__card-name">Project Caption</p>
+            </figure>
+          </div>
+          <div class="portfolio__card">
+            <figure class="portfolio__card-figure">
+              <img src="../imgs/project1.jpg" alt="" class="portfolio__card-img">
+              <p class="portfolio__card-category">Category</p>
+              <p class="portfolio__card-name">Project Caption</p>
+            </figure>
+          </div>
+          <div class="portfolio__card">
+            <figure class="portfolio__card-figure">
+              <img src="../imgs/project2.jpg" alt="" class="portfolio__card-img">
+              <p class="portfolio__card-category">Category</p>
+              <p class="portfolio__card-name">Project Caption</p>
+            </figure>
+          </div>
+          <div class="portfolio__card portfolio__card-category-webdev">
+            <figure class="portfolio__card-figure">
+              <img src="../imgs/project3.jpg" alt="" class="portfolio__card-img">
+              <p class="portfolio__card-category">Category</p>
+              <p class="portfolio__card-name">Project Caption</p>
+            </figure>
+          </div>
+          <div class="portfolio__card">
+            <figure class="portfolio__card-figure">
+              <img src="../imgs/project4.jpg" alt="" class="portfolio__card-img">
+              <p class="portfolio__card-category">Category</p>
+              <p class="portfolio__card-name">Project Caption</p>
+            </figure>
+          </div>
+          <div class="portfolio__card">
+            <figure class="portfolio__card-figure">
+              <img src="../imgs/project5.jpg" alt="" class="portfolio__card-img">
+              <p class="portfolio__card-category">Category</p>
+              <p class="portfolio__card-name">Project Caption</p>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--portfolio section ending-->
+
     <!--contact section beginning-->
     <div class="contact">
       <div class="contact__container">
